# Academic-Merit-Tokenization

./: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
smartcontract/: Cargo.toml  README.md
smartcontract/src/: credential.rs  errors.rs  issuer.rs  lib.rs
src/: App.jsx  index.css
src/components/: CredentialsList.jsx  Dashboard.jsx  FundAccount.jsx  IssueCredential.jsx  NetworkStatus.jsx  TransactionHistory.jsx  VerifyCredential.jsx
src/lib/: stellar.js
